--- a/truck_mate_front/src/features/user/login/LoginForm.module.css
+++ b/truck_mate_front/src/features/user/login/LoginForm.module.css
@@ -12,7 +12,8 @@ label {
 }
 
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+input[type="email"]{
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
