--- a/truck_mate_front/src/features/cost/Cost.module.css
+++ b/truck_mate_front/src/features/cost/Cost.module.css
@@ -103,3 +103,13 @@
 .cost_form button[type="submit"]:hover {
   background-color: #0069d9;
 }
+
+@media (max-width: 768px) {
+    .cost_row ul {
+        flex-direction: column;
+    }
+    .cost_row ul li {
+        text-align: left;
+        padding: 5px 0;
+    }
+}
