--- a/truck_mate_front/src/features/dashboard/Dashboard.module.css
+++ b/truck_mate_front/src/features/dashboard/Dashboard.module.css
@@ -50,11 +50,15 @@ img {
     display: none;
 }
 
-.burger .line {
+.burger div {
     width: 25px;
     height: 3px;
     background-color: #fff;
     margin: 5px;
+}
+
+.open {
+    display: flex !important;
 }
 
 @media (max-width: 768px) {
@@ -84,7 +88,17 @@ img {
         font-size: 1.5em;
     }
 
-    .burger .line {
+    .burger {
+        display: block;
+    }
+
+    .burger div {
         width: 20px;
+    }
+    .images_container {
+        flex-direction: column;
+        align-items: center;
+        padding: 10px 0;
+        margin: 10% auto;
     }
 }
